# grannyclock

CAD/ClockV1/: ClockV1Box.FCStd  LICENSE  README.md
CAD/DualAABatteryBox/: DualAABatteryBox.step  README.md
CAD/HD-1688_Inner/: HD-1688_Inner.FCStd  HD-1688_Inner.csv  HD-1688_Inner.step  LICENSE  README.md
CAD/TFA_Dostmann_60_3518_01/: LICENSE  README.md  TFA_Dostmann_60_3518_01.FCStd  TFA_Dostmann_60_3518_01.step  dimensions.csv
PCB/ClockV1/: .gitignore  ClockV1.kicad_jobset  ClockV1.kicad_pcb  ClockV1.kicad_prl  ClockV1.kicad_pro  ClockV1.kicad_sch  ClockV1.step  LICENSE  README.md
PCB/ClockV1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Sniffer/: README.md  SPECS.md
Sniffer/circuit/: Sniffer.fzz
Sniffer/include/: Config.h  SDCardManager.h  SignalLogger.h  StatusIndicator.h
Sniffer/scripts/: Analysis.ipynb  csv2vcd.py
Sniffer/src/: SDCardManager.cpp  SignalLogger.cpp  StatusIndicator.cpp  main.cpp
Testing/: README.md
Testing/ATtiny1616Boilerplate/: README.md  platformio.ini
Testing/ATtiny1616Boilerplate/circuit/: ATtiny1616Boilerplate.fzz
Testing/ATtiny1616Boilerplate/scripts/: requirements.py
Testing/ATtiny1616Boilerplate/src/: main.cpp
Testing/DRV8833DFPlayer/: README.md
Testing/DRV8833DFPlayer/circuit/: DRV8833.fzz
Testing/DRV8833DFPlayer/include/: Config.h
Testing/DRV8833DFPlayer/src/: main.cpp
Testing/PyGrannyTool/: README.md  pyproject.toml
Testing/PyGrannyTool/src/pygrannytool/: __init__.py  __main__.py  cli.py  gps.py  utils.py
Testing/Sniffer/: .gitignore  platformio.ini
(+8 files in other folders)
